@@ -1,41 +1,55 @@
 package com.example.Model;
 
 /**
- * Representa um usuário com nível de administração
- * Inclui informações como nome, email, senha e um código de acesso
+ * Representa um usuário com o cargo de administração.
+ * Esta classe armazena informações essenciais de um administrador,
+ * incluindo credenciais de acesso e dados pessoais, 
+ * garantindo a integridade dos dados através de validações.
  */
 public class Administracao {
-    // Atributos
+// Atributos
     private int id;
     private String nome;
     private String email;
     private String senha;
     private String codigoAcesso;
 
-    //Métodos Construtores
-    /**
-     * Vale ressaltar que nos método Setters, acontece as validações de exceções
-     * Por esse motivo, os métodos Setters estão sendo usados nos método construtores
-     */
+// Métodos Construtores
+
+/**
+ * Vale ressaltar que nos métodos setters, acontece as validações de exceções
+ * Por esse motivo, os métodos setters estão sendo usados nos métodos construtores
+ */
     public Administracao (String nome, String email, String senha, String codigoAcesso) {
-        this.setNome(nome);
-        this.setEmail(email);
-        this.setSenha(senha);
-        this.setCodigoAcesso(codigoAcesso);
+        try {
+            this.setNome(nome);
+            this.setEmail(email);
+            this.setSenha(senha);
+            this.setCodigoAcesso(codigoAcesso);
+        } catch (IllegalArgumentException e) {
+            e.printStackTrace();
+        }
     }
 
     public Administracao (int id, String nome, String email, String senha, String codigoAcesso){
-        this.setId(id);
-        this.setNome(nome);
-        this.setEmail(email);
-        this.setSenha(senha);
-        this.setCodigoAcesso(codigoAcesso);
+        try {
+            this.setId(id);
+            this.setNome(nome);
+            this.setEmail(email);
+            this.setSenha(senha);
+            this.setCodigoAcesso(codigoAcesso);
+        } catch (IllegalArgumentException e) {
+            e.printStackTrace();
+        }
+        
     }
 
-    //Getters e Setters
+// Métodos Getters e Setters
+
+// Para o ID
     public void setId (int id) {
-        if (id <= 0) { // Exceção: verifica se o ID é negativo ou igual a zero
-            throw new IllegalArgumentException("O ID não pode ser zero ou negativo.");
+        if (id <= 0) { // Exceção: verifica se o ID é negativo ou igual a zero.
+            throw new IllegalArgumentException("O ID (" + id + ") não pode ser zero ou negativo.");
         }
         this.id = id;
     }
@@ -43,8 +57,9 @@ public class Administracao {
         return id;
     }
 
+// Para o nome
     public void setNome(String nome) {
-        if (nome == null || nome.isBlank()) { // Exceção: verifica se o nome é nulo ou só contém espaço
+        if (nome == null || nome.trim().isEmpty()) { // Exceção: verifica se o nome é nulo ou só contém espaço
             throw new IllegalArgumentException("O nome não pode ser nulo ou vazio.");
         }
         this.nome = nome;
@@ -53,9 +68,10 @@ public class Administracao {
         return nome;
     }
 
+// Para o email
     public void setEmail (String email){
-        if (email == null || email.isBlank()) { // Exceção: verificar se o email é válido
-            throw new IllegalArgumentException("O e-mail fornecido não é válido.");
+        if (email == null || email.trim().isEmpty()) { // Exceção: verificar se o email é válido
+            throw new IllegalArgumentException("O e-mail (" + email + ") fornecido não é válido.");
         }
         this.email = email;
     }
@@ -63,9 +79,10 @@ public class Administracao {
         return email;
     }
 
+// Para a senha
     public void setSenha (String senha) {
-        if (senha == null || senha.isBlank()) { // Exceção: verificar se a senha é nula ou só contém espaço
-            throw new IllegalArgumentException("A senha não pode ser nula ou vazia.");
+        if (senha == null || senha.trim().isEmpty()) { // Exceção: verificar se a senha é nula ou só contém espaço
+            throw new IllegalArgumentException("A senha (" + senha + ") não pode ser nula ou vazia.");
         }
         this.senha = senha;
     }
@@ -73,9 +90,10 @@ public class Administracao {
         return senha;
     }
 
+// Para o código de acesso
     public void setCodigoAcesso(String codigoAcesso) {
-        if (codigoAcesso == null || codigoAcesso.isBlank()) { // Exceção: verificar se o código de acesso é nulo ou só contém espaço
-            throw new IllegalArgumentException("O código de acesso não pode ser nula ou vazia.");            
+        if (codigoAcesso == null || codigoAcesso.trim().isEmpty()) { // Exceção: verificar se o código de acesso é nulo ou só contém espaço
+            throw new IllegalArgumentException("O código de acesso não pode ser nulo ou vazio.");            
         }
         this.codigoAcesso = codigoAcesso;
     }
@@ -83,7 +101,7 @@ public class Administracao {
         return codigoAcesso;
     }
 
-    // Método toString
+// Método toString
     public String toString () {
         return String.format("Administração | Id: %-3d | Nome: %-20s | E-mail: %-20s | Senha: %-25s | Código de acesso: %-10s",
                 this.id,
